--- a/index.html
+++ b/index.html
@@ -39,8 +39,11 @@
                     <h1>Ristorante con Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
-                <div class="col-12 col-sm align-self-center">
+                <div class="col-12 col-sm-3 align-self-center">
                     <img src="img/logo.png" class="img-fluid">
+                </div>
+                <div class="col-12  col-sm-3 align-self-center">
+                    <a class="btn btn-warning btn-block" href="#c6">Reserve the Table</a>
                 </div>
             </div>
         </div>
@@ -56,11 +59,13 @@
                     <img class="d-flex mr-3 img-thumbnail align-self-center"
                             src="img/uthappizza.png" alt="Uthappizza">
                     <div class="media-body">
-                        <h2 class="mt-0">Uthappizza</h2>
-                        <p class="d-none d-sm-block">A unique combination of Indian Uthappam (pancake) and
-                            Italian pizza, topped with Cerignola olives, ripe vine
-                            cherry tomatoes, Vidalia onion, Guntur chillies and
-                            Buffalo Paneer.</p>
+                        <h2 class="mt-0">Uthappizza <span class="badge badge-danger">HOT</span> <span class="badge badge-pill badge-secondary">$4.99</span></h2>
+                        <div class="d-none d-sm-block">
+                            <p class="d-none d-sm-block">A unique combination of Indian Uthappam (pancake) and
+                                Italian pizza, topped with Cerignola olives, ripe vine
+                                cherry tomatoes, Vidalia onion, Guntur chillies and
+                                Buffalo Paneer.</p>
+                        </div>
                     </div>
                 </div>
 
@@ -73,9 +78,15 @@
                 <h3>This Month's Promotions</h3>
             </div>
             <div class="col col-sm col-md">
-                <h2>Weekend Grand Buffet</h2>
-                <div class="d-none d-sm-block">
-                    <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+                <div class="media">
+                    <div class="media-body">
+                        <h2 class="mt-0">Weekend Grand Buffet <span class="badge badge-danger">New</span></h2>
+                        <div class="d-none d-sm-block">
+                            <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+                        </div>
+                    </div>
+                    <img class="d-flex ml-3 img-thumbnail align-self-center"
+                            src="img/buffet.png" alt="Weekend Grand Buffet">
                 </div>
             </div>
         </div>
@@ -98,6 +109,73 @@
                             </p>
                     </div>
                 </div>
+            </div>
+        </div>
+        <div class="row row-content align-items-center" id="c6">
+            <div class="col-12  col-sm-8 offset-2">
+                <div class="card">
+                    <h3 class="card-header bg-warning text-white">Reserve a Table</h3>
+                    <div class="card-body">
+                        <dl class="row">
+                            <form>
+                                <div class="form-group row align-items-center">
+                                    <label for="Number of Guests" class="c0l-12 col-md-3 col-form-label">Number of Guests</label>
+                                    <div class="col-5 col-md-8">
+                                        <div class="form-check-inline">
+                                            <label class="form-check-label">
+                                            <input type="radio" class="form-check-input" name="optradio">1
+                                            </label>
+                                        </div>
+                                        <div class="form-check-inline">
+                                            <label class="form-check-label">
+                                            <input type="radio" class="form-check-input" name="optradio">2
+                                            </label>
+                                        </div>
+                                        <div class="form-check-inline disabled">
+                                            <label class="form-check-label">
+                                            <input type="radio" class="form-check-input" name="optradio">3
+                                            </label>
+                                        </div>
+                                        <div class="form-check-inline">
+                                            <label class="form-check-label">
+                                            <input type="radio" class="form-check-input" name="optradio">4
+                                            </label>
+                                        </div>
+                                        <div class="form-check-inline">
+                                            <label class="form-check-label">
+                                            <input type="radio" class="form-check-input" name="optradio">5
+                                            </label>
+                                        </div>
+                                        <div class="form-check-inline disabled">
+                                            <label class="form-check-label">
+                                            <input type="radio" class="form-check-input" name="optradio">6
+                                            </label>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="form-group row align-items-center">
+                                    <label for="datentime" class="c0l-12 col-md-3 col-form-label">Date and Time</label>
+                                    <div class="col-5 col-md-4">
+                                        <input type="date" class="form-control" id="date" name="date"
+                                            placeholder="Date">
+                                    </div>
+                                    <div class="col-7 col-md-4">
+                                        <input type="time" class="form-control" id="time" name="time"
+                                            placeholder="Time">
+                                    </div>
+                                </div>
+                                <div class="form-group row">
+                                    <div class="offset-md-3 col-md-9">
+                                        <button type="submit" class="btn btn-primary">
+                                            Reserve
+                                        </button>
+                                    </div>
+                                </div>
+                            </form>
+                            </form>
+                        </dl>
+                    </div>
+                </div>        
             </div>
         </div>
     </div>
