--- a/index.html
+++ b/index.html
@@ -214,6 +214,14 @@
                     <a class="carousel-control-next" href="#mycarousel" role="button" data-slide="next">
                         <span class="carousel-control-next-icon"></span>
                     </a>
+                    <div class="btn-group" id="carouselButton">
+                        <button class="btn btn-danger btn-sm" id="carousel-pause">
+                            <span class="fa fa-pause"></span>
+                        </button>
+                        <button class="btn btn-danger btn-sm" id="carousel-play">
+                            <span class="fa fa-play"></span>
+                        </button>
+                    </div>
                 </div>
              </div>
         </div>
@@ -278,74 +286,7 @@
                 </div>
             </div>
         </div>
-        <div class="row row-content align-items-center" id="c6">
-            <div class="col-12  col-sm-8 offset-2">
-                <div class="card">
-                    <h3 class="card-header bg-warning text-white">Reserve a Table</h3>
-                    <div class="card-body">
-                        <dl class="row">
-                            <form>
-                                <div class="form-group row align-items-center">
-                                    <label for="Number of Guests" class="c0l-12 col-md-3 col-form-label">Number of Guests</label>
-                                    <div class="col-5 col-md-8">
-                                        <div class="form-check-inline">
-                                            <label class="form-check-label">
-                                            <input type="radio" class="form-check-input" name="optradio">1
-                                            </label>
-                                        </div>
-                                        <div class="form-check-inline">
-                                            <label class="form-check-label">
-                                            <input type="radio" class="form-check-input" name="optradio">2
-                                            </label>
-                                        </div>
-                                        <div class="form-check-inline disabled">
-                                            <label class="form-check-label">
-                                            <input type="radio" class="form-check-input" name="optradio">3
-                                            </label>
-                                        </div>
-                                        <div class="form-check-inline">
-                                            <label class="form-check-label">
-                                            <input type="radio" class="form-check-input" name="optradio">4
-                                            </label>
-                                        </div>
-                                        <div class="form-check-inline">
-                                            <label class="form-check-label">
-                                            <input type="radio" class="form-check-input" name="optradio">5
-                                            </label>
-                                        </div>
-                                        <div class="form-check-inline disabled">
-                                            <label class="form-check-label">
-                                            <input type="radio" class="form-check-input" name="optradio">6
-                                            </label>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="form-group row align-items-center">
-                                    <label for="datentime" class="c0l-12 col-md-3 col-form-label">Date and Time</label>
-                                    <div class="col-5 col-md-4">
-                                        <input type="date" class="form-control" id="date" name="date"
-                                            placeholder="Date">
-                                    </div>
-                                    <div class="col-7 col-md-4">
-                                        <input type="time" class="form-control" id="time" name="time"
-                                            placeholder="Time">
-                                    </div>
-                                </div>
-                                <div class="form-group row">
-                                    <div class="offset-md-3 col-md-9">
-                                        <button type="submit" class="btn btn-primary">
-                                            Reserve
-                                        </button>
-                                    </div>
-                                </div>
-                            </form>
-                        </dl>
-                    </div>
-                </div>        
-            </div>
-        </div>
     </div>
-
     <footer class="footer">
         <div class="container">
             <div class="row">             
@@ -391,6 +332,17 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script>
+        $(document).ready(function(){
+            $("#mycarousel").carousel( { interval: 2000 } );
+            $("#carousel-pause").click(function(){
+                $("#mycarousel").carousel('pause');
+            });
+            $("#carousel-play").click(function(){
+                $("#mycarousel").carousel('cycle');
+            });
+        });
+    </script>
 </body>
 
 </html>
