--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
         <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css">
         <link rel="stylesheet" href="css/styles.css">
+        <link rel="stylesheet" href="css/styles.less">
+        <link rel="stylesheet" href="css/styles.scss">
     <title>Ristorante Con Fusion</title>
 </head>
 
